feat: metodos http de pedidos